--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/viewpager": "^4.2.2",
+    "@react-native-firebase/app": "^10.8.0",
+    "@react-native-firebase/messaging": "^10.8.0",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/drawer": "^5.11.4",
     "@react-navigation/native": "^5.8.10",
@@ -29,6 +32,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-config": "^1.4.1",
     "react-native-device-info": "^8.0.0",
+    "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
