--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,6 +10,10 @@ target 'One21' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'RNFBMessaging', :path => '../node_modules/@react-native-firebase/messaging'
+
+  pod 'RNFBApp', :path => '../node_modules/@react-native-firebase/app'
+
   target 'One21Tests' do
     inherit! :complete
     # Pods for testing
